<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/timer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textColor="#F73022"
        android:textSize="18sp"
        android:textStyle="bold"
        android:typeface="monospace"
        android:visibility="visible"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/newTweetText"
        android:layout_width="164dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="125dp"
        android:layout_marginLeft="125dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="136dp"
        android:layout_marginRight="136dp"
        android:text="@string/newTweet"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/tweet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:gravity="center_horizontal"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="24sp"
        android:textStyle="bold"
        android:typeface="serif"
        app:fontFamily="serif" />

    <Button
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_marginStart="160dp"
        android:layout_marginLeft="160dp"
        android:layout_marginEnd="136dp"
        android:text="@string/newTweetButton"
        tools:text="@string/newTweetButton"
        android:layout_marginRight="136dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/realOrFake"
        android:textSize="20dp" />

    <Button
        android:id="@+id/realButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/real"
        tools:layout_marginLeft="150dp" />

    <Button
        android:id="@+id/fakeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="200dp"
        android:layout_marginLeft="300dp"
        android:layout_marginTop="-48dp"
        android:text="@string/fake" />

</LinearLayout>